# wingpanel-co2monitor

./: README.md  meson.build
src/: CO2Monitor.vala  Indicator.vala
vapi/: hidapi-libusb.vapi
